fix crypt results info button width with narrow group results on mobile

--- a/react-frontend/src/assets/css/style.styl
+++ b/react-frontend/src/assets/css/style.styl
@@ -154,6 +154,9 @@ div.no-border
   background: var(--bg-secondary)
   height: 38px
 
+button.total-info
+  max-width: 42px
+
 .inventory-info
   background: var(--bg-secondary)
 
